--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Test Viridian Reef (integration) 🧪
         working-directory: viridian/reef
         env:
-          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml
+          RUNNER_COMMAND: cargo run --features cli-exec --bin cli
           TEST_COMMAND: cd ../algae && poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -a "${{ env.SEASIDE_ADDRESS }}" -c "${{ env.SEASIDE_CTRLPORT }}" -p "${{ env.SEASIDE_PAYLOAD_VIRIDIAN }}" -e "${{ env.TEST_COMMAND }}"
 
