--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -90,8 +90,7 @@ setup = [
 
 test = [
     "colorama~=0.4.6",
-    "python-on-whales~=0.76.1",
-    "PyYAML~=6.0.2"
+    "python-on-whales~=0.76.1"
 ]
 
 protocol = [
@@ -128,7 +127,8 @@ default_task_type = "script"
 
 
 [tool.poe.tasks]
-client = { script = "sources.main:main", help = "Import and execute main function of algae simple client, pass console arguments to it" }
+client = { script = "sources.automation:simple_client", help = "Import and execute main function of algae simple client, pass console arguments to it" }
+fixture = { script = "sources.automation:whirlpool_fixtures", help = "Import and execute one of the whirlpool fixtures, pass console arguments to it" }
 lint = { script = "scripts.codestyle:lint", help = "Lint all python code: run 'flake8', 'black' and 'mypy'" }
 format = { script = "scripts.codestyle:format", help = "Format all python code: change code formatting where possible (using 'black')" }
 generate = { script = "scripts.process:generate", help = "Generate protobuf source files, previous generation results will be removed; libraries 'grpcio-tools' and 'betterproto' is used for generation" }
