--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -11,7 +11,7 @@ license-files = [
 ]
 
 authors = [
-    { name = "Alexander Sergeev", email = "alexander.sergeev@onmail.com>" }
+    { name = "Alexander Sergeev", email = "alexander.sergeev@onmail.com" }
 ]
 
 keywords = [
