--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
 name: TEST
-# TODO: fix 'poetry self add ...' once windows issue is resolved: https://github.com/python-poetry/poetry/issues/10028
 
 on:
   push:
@@ -87,7 +86,7 @@ jobs:
         env:
           SEASIDE_LOG_LEVEL: ERROR
         run: |
-          LINK=$(poetry poe fixture -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
+          LINK=$(python3 -m sources.automation.whirlpool_fixtures -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
 
       - name: Test Viridian Algae (standalone) 🧪
@@ -159,7 +158,7 @@ jobs:
         env:
           SEASIDE_LOG_LEVEL: ERROR
         run: |
-          LINK=$(poetry poe fixture -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
+          LINK=$(python3 -m sources.automation.whirlpool_fixtures -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
 
       - name: Test Viridian Reef (integration) 🧪
