link parsing added

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,10 +46,6 @@ jobs:
   viridian-algae-test-quick:
     name: Test Viridian Algae Quick
     runs-on: ubuntu-latest
-    env:
-      SEASIDE_ADDRESS: 10.87.82.87
-      SEASIDE_API_PORT: 8587
-      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: ${{ github.workspace }}/viridian/algae/certificates/viridian/rootCA.crt
 
     steps:
       - name: Checkout 🛎️
@@ -88,6 +84,9 @@ jobs:
       - name: Get Connection Link
         working-directory: viridian/algae
         env:
+          SEASIDE_ADDRESS: 10.87.82.87
+          SEASIDE_API_PORT: 8587
+          SEASIDE_ROOT_CERTIFICATE_AUTHORITY: ${{ github.workspace }}/viridian/algae/certificates/viridian/rootCA.crt
           SEASIDE_LOG_LEVEL: ERROR
         run: |
           LINK=$(poetry poe fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
@@ -99,16 +98,13 @@ jobs:
           LOCAL_ADDRESS: 127.0.0.1
           ECHO_ADDRESS: 10.42.0.42
           TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
-        run: sudo -E env "PATH=$PATH" poetry poe client -a ${{ env.SEASIDE_ADDRESS }} -k ${{ env.SEASIDE_API_KEY_OWNER }} -p ${{ env.SEASIDE_API_PORT }} -e \"${{ env.TEST_COMMAND }}\"
+        run: sudo -E env "PATH=$PATH" poetry poe client -l ${{ env.WHIRLPOOL_LINK }} -e "${{ env.TEST_COMMAND }}"
 
   viridian-reef-test:
     name: Test Viridian Reef
     runs-on: ${{ format('{0}-latest', matrix.os) }}
     env:
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
-      SEASIDE_ADDRESS: 10.87.82.87
-      SEASIDE_API_PORT: 8587
-      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: ${{ github.workspace }}/viridian/algae/certificates/viridian/rootCA.crt
     strategy:
       fail-fast: false
       matrix:
@@ -163,6 +159,9 @@ jobs:
       - name: Get Connection Link
         working-directory: viridian/algae
         env:
+          SEASIDE_ADDRESS: 10.87.82.87
+          SEASIDE_API_PORT: 8587
+          SEASIDE_ROOT_CERTIFICATE_AUTHORITY: ${{ github.workspace }}/viridian/algae/certificates/viridian/rootCA.crt
           SEASIDE_LOG_LEVEL: ERROR
         run: |
           LINK=$(poetry poe fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian)
@@ -174,8 +173,8 @@ jobs:
           LOCAL_ADDRESS: 127.0.0.1
           ECHO_ADDRESS: 10.42.0.42
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
-          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml
-          TEST_COMMAND: poetry run pytest --log-cli-level=INFO ../algae/tests/test_local.py
+          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
+          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
   caerulean-whirlpool-test:
