--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,13 +91,21 @@ jobs:
           LINK=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
   
-      - name: Test Viridian Algae (standalone) 🧪
+      - name: Test Viridian Algae PORT (standalone) 🧪
         working-directory: viridian/algae
         env:
           LOCAL_ADDRESS: 127.0.0.1
           ECHO_ADDRESS: 10.42.0.42
           TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
-        run: sudo -E env "PATH=$PATH" poetry poe client -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+        run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+
+      - name: Test Viridian Algae TYPHOON (standalone) 🧪
+        working-directory: viridian/algae
+        env:
+          LOCAL_ADDRESS: 127.0.0.1
+          ECHO_ADDRESS: 10.42.0.42
+          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
+        run: sudo -E env "PATH=$PATH" poetry poe client -s typhoon -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
   viridian-reef-test:
     name: Test Viridian Reef
@@ -165,7 +173,7 @@ jobs:
           LINK=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
 
-      - name: Test Viridian Reef (integration) 🧪
+      - name: Test Viridian Reef PORT (integration) 🧪
         working-directory: viridian/algae
         env:
           LOCAL_ADDRESS: 127.0.0.1
@@ -173,7 +181,17 @@ jobs:
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
           RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
           TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
-        run: sudo -E env "PATH=$PATH" poetry poe client -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+        run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -p port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+
+      - name: Test Viridian Reef TYPHOON (integration) 🧪
+        working-directory: viridian/algae
+        env:
+          LOCAL_ADDRESS: 127.0.0.1
+          ECHO_ADDRESS: 10.42.0.42
+          SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
+          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
+          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
+        run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -p typhoon -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
