--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,10 @@ jobs:
   viridian-algae-test-quick:
     name: Test Viridian Algae Quick
     runs-on: ubuntu-latest
+    env:
+      LOCAL_ADDRESS: 127.0.0.1
+      ECHO_ADDRESS: 10.42.0.42
+      TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
 
     steps:
       - name: Checkout 🛎️
@@ -91,20 +95,16 @@ jobs:
           LINK=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
   
+      - name: Test Echo Server Access (no VPN)
+        working-directory: viridian/algae
+        run: eval "${{ env.TEST_COMMAND }}" && exit 1 || true
+
       - name: Test Viridian Algae PORT (standalone) 🧪
         working-directory: viridian/algae
-        env:
-          LOCAL_ADDRESS: 127.0.0.1
-          ECHO_ADDRESS: 10.42.0.42
-          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
       - name: Test Viridian Algae TYPHOON (standalone) 🧪
         working-directory: viridian/algae
-        env:
-          LOCAL_ADDRESS: 127.0.0.1
-          ECHO_ADDRESS: 10.42.0.42
-          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: sudo -E env "PATH=$PATH" poetry poe client -s typhoon -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
   viridian-reef-test:
@@ -112,6 +112,10 @@ jobs:
     runs-on: ${{ format('{0}-latest', matrix.os) }}
     env:
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
+      LOCAL_ADDRESS: 127.0.0.1
+      ECHO_ADDRESS: 10.42.0.42
+      RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
+      TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
     strategy:
       fail-fast: false
       matrix:
@@ -172,25 +176,21 @@ jobs:
         run: |
           LINK=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)
           echo "WHIRLPOOL_LINK=$LINK" >> $GITHUB_ENV
+  
+      - name: Test Echo Server Access (no VPN)
+        working-directory: viridian/algae
+        run: eval "${{ env.TEST_COMMAND }}" && exit 1 || true
 
       - name: Test Viridian Reef PORT (integration) 🧪
         working-directory: viridian/algae
         env:
-          LOCAL_ADDRESS: 127.0.0.1
-          ECHO_ADDRESS: 10.42.0.42
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
-          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
-          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -p port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
       - name: Test Viridian Reef TYPHOON (integration) 🧪
         working-directory: viridian/algae
         env:
-          LOCAL_ADDRESS: 127.0.0.1
-          ECHO_ADDRESS: 10.42.0.42
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
-          RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
-          TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
         run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -p typhoon -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
   caerulean-whirlpool-test:
