--- a/viridian/algae/docker/compose.standalone.yml
+++ b/viridian/algae/docker/compose.standalone.yml
@@ -28,6 +28,13 @@ services:
         ipv4_address: 10.87.82.87
       sea-rout-ext:
         ipv4_address: 10.87.42.87
+    depends_on:
+      int-router:
+        condition: service_started
+      ext-router:
+        condition: service_started
+      echo:
+        condition: service_healthy
 
   ext-router:
     container_name: seaside-external-router
